--- a/MulherSegura.ipynb
+++ b/MulherSegura.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 10,
       "metadata": {
         "id": "hCjNyHiLkV2o"
       },
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "9EiG7hjjkf8d"
       },
-      "execution_count": 2,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "94ozoRG_krjr"
       },
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "b_YnllnNk62J"
       },
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "n_DQDhZqmR16"
       },
-      "execution_count": 5,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
       "metadata": {
         "id": "82yugix_lSmL"
       },
-      "execution_count": 6,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
       "metadata": {
         "id": "AhwW6qIHncPD"
       },
-      "execution_count": 7,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -199,84 +199,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "base_uri": "https://localhost:8080/"
         },
         "id": "-7KRxNEfqR16",
-        "outputId": "c2162d66-3b7b-4146-bd6d-f826f9c6ce5e"
+        "outputId": "fdb9cbf8-7feb-4b26-ecdf-c067a018db86"
       },
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Esperando o prompt: Meu nome é Maria Silva, tenho 40 anos e nasci dia 01 de junho. Fui agredida em casa pelo meu companheiro\n",
-            "Resposta:  **Dados Pessoais:**\n",
-            "\n",
-            "* Nome: Maria Silva\n",
-            "* Idade: 40 anos\n",
-            "* Data de Nascimento: 01/06/1983\n",
-            "* CPF: Não informado\n",
-            "* Sexo: Não informado\n",
-            "* Nome Social: Não informado\n",
-            "\n",
-            "**Ocorrência:**\n",
-            "\n",
-            "* Tipo: Violência doméstica\n",
-            "* Local: Residência da vítima\n",
-            "* Autor: Companheiro da vítima\n",
-            "* Data e hora: Não informados\n",
-            "* Lesões sofridas: Não informadas\n",
-            "\n",
-            "**Observações:**\n",
-            "\n",
-            "* A vítima não informou o CPF, sexo e nome social.\n",
-            "* A vítima não informou a data e hora da agressão.\n",
-            "* A vítima não informou se sofreu algum tipo de lesão.\n",
-            "\n",
-            "**JSON:**\n",
-            "\n",
-            "```\n",
-            "{\n",
-            "  \"descricaoOcorrencia\": \"A vítima, Maria Silva, 40 anos, foi agredida em casa pelo seu companheiro. Não há informações sobre a data e hora da agressão, nem sobre as lesões sofridas pela vítima.\",\n",
-            "  \"pessoasFisicas\": [\n",
-            "    {\n",
-            "      \"cpf\": null,\n",
-            "      \"sexo\": null,\n",
-            "      \"nome\": \"Maria Silva\",\n",
-            "      \"nomeSocial\": null,\n",
-            "      \"dataNascimento\": \"1983-06-01\"\n",
-            "    }\n",
-            "  ]\n",
-            "}\n",
-            "```\n",
-            "\n",
-            "**Valores nulos:**\n",
-            "\n",
-            "* CPF\n",
-            "* Sexo\n",
-            "* Nome Social\n",
-            "* Data e hora da agressão\n",
-            "* Lesões sofridas\n",
-            "\n",
-            "**Observações:**\n",
-            "\n",
-            "* Os dados do agressor não foram informados pela vítima, portanto, não foram incluídos no JSON. \n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "Interrupted by user",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-9-1204c707b5f8>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m   \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Resposta: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m   \u001b[0mprompt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Esperando o prompt: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    849\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    850\u001b[0m             )\n\u001b[0;32m--> 851\u001b[0;31m         return self._input_request(str(prompt),\n\u001b[0m\u001b[1;32m    852\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    853\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    893\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    894\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 895\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    896\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+            "Esperando o prompt: fim\n"
           ]
         }
       ]
